hphp/test/slow/readonly/this_ty.php.expectf
Fatal error: Cannot modify a member of a readonly variable in %s on line 6
